--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,13 @@ body {
     background-color: hsl(217, 54%, 11%);
 }
 
+p {
+    color: hsl(215, 51%, 70%);
+    font-family: 'Outfit', sans-serif;
+    font-size: 1.125rem;
+    font-weight: 300;
+}
+
 .card {
     background-color: hsl(216, 50%, 16%);
 }
