--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,13 @@ body {
     background-color: hsl(217, 54%, 11%);
 }
 
+h5 {
+    color: hsl(0, 0%, 100%);
+    font-family: 'Outfit', sans-serif;
+    font-weight: 600;
+
+}
+
 p {
     color: hsl(215, 51%, 70%);
     font-family: 'Outfit', sans-serif;
