Added a small white border around image and reduced the size of image to fit better. Added float left so the text can wrap around it

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,14 @@ p {
 
 /* footer */
 
+.avatar {
+    border: 1px white solid;
+    border-radius: 100%;
+    float: left;
+    margin-right: 20px;
+    width: 15%;
+}
+
 .creator {
     color: hsl(0, 0%, 100%);;
 }
